[tool.poetry]
name = "agentic-examples"
version = "0.1.0"
description = ""
authors = ["arun-terrablueai <arun@terrablue.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
python-dotenv = "^1.0.1"
langchain-core = "^0.3.45"
langchain-openai = "^0.3.9"
pydantic = "^2.10.6"
langgraph = "^0.3.14"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
